--- a/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeHashSet=
+WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
@@ -473,12 +473,12 @@ StaticMeshActor.Actor=True
 StaticMeshComponent.Materials=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1804,10 +1804,10 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_Item
-MRUItem1=/Game/FirstPerson/Icons/interact_icon
-MRUItem2=/Game/FirstPerson/Icons/floatingCircle
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/FirstPerson/Blueprints/BP_Item
+MRUItem2=/Game/FirstPerson/Icons/interact_icon
+MRUItem3=/Game/FirstPerson/Icons/floatingCircle
 MRUItem4=/Game/FirstPerson/Effect/BP_Walk
 MRUItem5=/Game/FirstPerson/Effect/BP_Sprint
 MRUItem6=/Game/FirstPerson/Effect/BP_Idle
@@ -1834,8 +1834,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
