--- a/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=992)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@VICTUS
 LastExecutedLaunchName=VICTUS
 LastExecutedPIEPreviewDevice=
@@ -231,7 +231,7 @@ CheckPoint_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.P
 StaticMeshActor=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 Church_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 Buton_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
-BillboardComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
+BillboardComponent=
 K2Node_VariableGet=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 BP_FirstPersonCharacter2_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 BP_FirstPersonCharacter3_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
@@ -239,8 +239,8 @@ K2Node_VariableSet=StaticMeshComponent.TransformCommon.Transform,StaticMeshCompo
 PropertyWrapper=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 K2Node_CustomEvent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 MulticastInlineDelegatePropertyWrapper=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
-Enemy_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
-CapsuleComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+Enemy_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
+CapsuleComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 NavMeshBoundsVolume=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 BrushComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 RecastNavMesh=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
@@ -257,7 +257,7 @@ Actor=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.
 PotionPaper_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 PoisonPotion2_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 TruePotion_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
-BP_Key_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+BP_Key_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 BP_Item_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 K2Node_MacroInstance=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 PaperSpriteComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
@@ -283,6 +283,8 @@ Blueprint_BlueFiree_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshCo
 Blueprint_Bluefiren_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 Buton2_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 TVBlue2_C=
+EdGraph=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
+K2Node_FunctionResult=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 
 [NiagaraSequenceEditor SequencerSettings]
 ColumnVisibilitySettings=(ColumnName="Indicator",bIsVisible=True)
@@ -375,7 +377,7 @@ LastFilterBarSizeCoefficient=0.000000
 ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Door
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
@@ -458,9 +460,9 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.B
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
@@ -484,7 +486,7 @@ SkinnedMeshComponent="\"Object\" "
 BP_FirstPersonCharacter3_C=
 Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-BP_FirstPersonCharacter2_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_FirstPersonCharacter2_C=
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 SpotLightComponent="\"Object\" "
@@ -560,8 +562,11 @@ K2Node_InputKey="\"Object\" "
 MediaPlayer="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=BlueprintEditor
@@ -587,15 +592,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Niagara
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/P_ButonPuzzle1/TVBlue2.TVBlue2
-OpenAssetsAtExit=/Game/P_ButonPuzzle1/Buton2.Buton2
-OpenAssetsAtExit=/Game/P_ButonPuzzle1/Buton1.Buton1
+OpenAssetsAtExit=/Game/Door/BP_Door.BP_Door
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2.BP_FirstPersonCharacter2
+OpenAssetsAtExit=/Game/Enemy/Enemy.Enemy
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Key.BP_Key
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericAssetsPipeline]
 PipelineDisplayName=Default Assets Pipeline
@@ -1775,12 +1776,29 @@ TVBlue2_C.Tick=True
 TVBlue2_C.Events=True
 MediaPlayer.Playback=True
 MediaPlayer.ViewSettings=True
+BP_Door_C.Default=True
+BP_Key_C.Default=True
+Buton_C.Default=True
+Buton2_C.Default=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+Enemy_C.Default=True
+BP_Key_C.Tick=True
+BP_Key_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentTick=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
 
 [InterchangeImportDialogOptions]
 ImportContentDialogSizeX=1000
 ImportContentDialogSizeY=650
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPerson/Blueprints/BP_Key.BP_Key;
+RecentlyPlaced=/Game/Door/BP_Door.BP_Door;
 RecentlyPlaced=/Game/P_ButonPuzzle1/TVBlue2.TVBlue2;
 RecentlyPlaced=/Engine/Transient.FileMediaSource_0;
 RecentlyPlaced=/Game/P_ButonPuzzle1/Buton2.Buton2;
@@ -1799,8 +1817,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter3.BP_FirstPersonCharacter3;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
 RecentlyPlaced=/Game/Church.Church;
-RecentlyPlaced=/Game/House.House;
-RecentlyPlaced=/Game/mimariplantexture_-_Copy.mimariplantexture_-_Copy;
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1809,36 +1825,35 @@ PreserveScaleRatio=True
 LastLogListing=BlueprintLog
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2
-MRUItem1=/Game/P_ButonPuzzle1/TVPlayer
-MRUItem2=/Game/P_ButonPuzzle1/TVBlue2
-MRUItem3=/Game/P_ButonPuzzle1/TVBlue
-MRUItem4=/Game/P_ButonPuzzle1/Buton2
-MRUItem5=/Game/P_ButonPuzzle1/Buton1
-MRUItem6=/Game/P_ButonPuzzle1/Buton
-MRUItem7=/Game/CheckPoint/CheckPoint
-MRUItem8=/Game/StarterContent/Blueprints/Blueprint_Bluefiren
-MRUItem9=/Game/StarterContent/Particles/P_Fire1
-MRUItem10=/Game/StarterContent/Props/SM_Door
-MRUItem11=/Game/P_ButonPuzzle1/Kapı
-MRUItem12=/Game/PotionsPuzzle2/IllusionPotion
-MRUItem13=/Game/ResetManager
-MRUItem14=/Game/PotionsPuzzle2/Potion
-MRUItem15=/Game/GameInstance
-MRUItem16=/Game/PotionsPuzzle2/ReturnPotion
-MRUItem17=/Game/Potions/PotionScreen1
-MRUItem18=/Game/PotionsPuzzle2/PotionNote2
-MRUItem19=/Game/PotionsPuzzle2/PotionPaper2
-MRUItem20=/Game/PotionsPuzzle2/PotionNote
-MRUItem21=/Game/PotionsPuzzle2/PotionEtkilesim
-MRUItem22=/Game/PotionsPuzzle2/PotionPaper
-MRUItem23=/Game/PotionsPuzzle2/TruePotion
-MRUItem24=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire
-MRUItem25=/Game/Door/BP_Door
-MRUItem26=/Game/Checkpointeffect
-MRUItem27=/Game/HouseWood
-MRUItem28=/Game/mimariplantexturefinal
-MRUItem29=/Game/mimariplantexturefinal2
+MRUItem0=/Game/FirstPerson/Blueprints/BP_Key
+MRUItem1=/Game/Enemy/Enemy
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2
+MRUItem3=/Game/Door/BP_Door
+MRUItem4=/Game/P_ButonPuzzle1/TVPlayer
+MRUItem5=/Game/P_ButonPuzzle1/TVBlue2
+MRUItem6=/Game/P_ButonPuzzle1/TVBlue
+MRUItem7=/Game/P_ButonPuzzle1/Buton2
+MRUItem8=/Game/P_ButonPuzzle1/Buton1
+MRUItem9=/Game/P_ButonPuzzle1/Buton
+MRUItem10=/Game/CheckPoint/CheckPoint
+MRUItem11=/Game/StarterContent/Blueprints/Blueprint_Bluefiren
+MRUItem12=/Game/StarterContent/Particles/P_Fire1
+MRUItem13=/Game/StarterContent/Props/SM_Door
+MRUItem14=/Game/P_ButonPuzzle1/Kapı
+MRUItem15=/Game/PotionsPuzzle2/IllusionPotion
+MRUItem16=/Game/ResetManager
+MRUItem17=/Game/PotionsPuzzle2/Potion
+MRUItem18=/Game/GameInstance
+MRUItem19=/Game/PotionsPuzzle2/ReturnPotion
+MRUItem20=/Game/Potions/PotionScreen1
+MRUItem21=/Game/PotionsPuzzle2/PotionNote2
+MRUItem22=/Game/PotionsPuzzle2/PotionPaper2
+MRUItem23=/Game/PotionsPuzzle2/PotionNote
+MRUItem24=/Game/PotionsPuzzle2/PotionEtkilesim
+MRUItem25=/Game/PotionsPuzzle2/PotionPaper
+MRUItem26=/Game/PotionsPuzzle2/TruePotion
+MRUItem27=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire
+MRUItem28=/Game/Checkpointeffect
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1905,6 +1920,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 /Game/P_ButonPuzzle1/TVBlue2.TVBlue2=0
 /Game/P_ButonPuzzle1/Buton2.Buton2=0
 /Game/P_ButonPuzzle1/Buton1.Buton1=0
+/Game/FirstPerson/Blueprints/BP_Door.BP_Door=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1928,8 +1944,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
