--- a/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -264,7 +264,7 @@ BrushComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent
 RecastNavMesh=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 Blueprint_Effect_Fire_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 ParticleSystemComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
-SkeletalMeshComponent=
+SkeletalMeshComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 Blueprint=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 PointLight=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 Blueprint_CeilingLight_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
@@ -454,6 +454,9 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=
 WBP_AgeDisplay_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 W_Message_C=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
+EdGraphNode_Comment=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
+K2Node_SwitchInteger=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
+CharacterMovementComponent=StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableSet.DefaultValueCategory.Tags
 
 [NiagaraSequenceEditor SequencerSettings]
 ColumnVisibilitySettings=(ColumnName="Indicator",bIsVisible=True)
@@ -673,8 +676,8 @@ BodySetupCore="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 BP_FirstPersonCharacter3_C=
-Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character=
+Pawn=
 BP_FirstPersonCharacter2_C=
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
@@ -743,7 +746,7 @@ CanvasPanel="\"Object\" "
 PotionNote_C="\"Object\" "
 UserWidget="\"Object\" "
 K2Node_SwitchString="\"Object\" \"Object.PinOptions.PinNames\" "
-K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
+K2Node_Switch="\"Object\" "
 ActorSequenceComponent="\"Object\" "
 TruePotion_C=
 Potion_C=
@@ -917,21 +920,22 @@ VerticalBox="\"Object\" "
 EndingWidget_C="\"Object\" "
 WBP_AgeDisplay_C="\"Object\" "
 W_Message_C="\"Object\" "
+K2Node_SwitchInteger="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
@@ -951,11 +955,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Enemy/Enemy.Enemy
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2.BP_FirstPersonCharacter2
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/W_Message.W_Message
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Key.BP_Key
-OpenAssetsAtExit=/Game/UI/WBP_AgeDisplay.WBP_AgeDisplay
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericAssetsPipeline]
 PipelineDisplayName=Default Assets Pipeline
@@ -2692,6 +2692,7 @@ W_Message_C.Localization=True
 W_Message_C.Accessibility=True
 W_Message_C.Rendering=True
 W_Message_C.Navigation=True
+K2Node_SwitchInteger.PinOptions=True
 
 [InterchangeImportDialogOptions]
 ImportContentDialogSizeX=1000
@@ -2726,17 +2727,17 @@ PreserveScaleRatio=True
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_Key
-MRUItem1=/Game/FirstPerson/Blueprints/W_Message
-MRUItem2=/Game/UI/WBP_AgeDisplay
-MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem4=/Game/scene/EndingGameMode
-MRUItem5=/Game/scene/EndingLevel
-MRUItem6=/Game/scene/MenuGameMode
-MRUItem7=/Game/scene/EndingWidget
-MRUItem8=/Game/scene/MainMenu
-MRUItem9=/Game/scene/MainMenuMap
-MRUItem10=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2
+MRUItem1=/Game/FirstPerson/Blueprints/BP_Key
+MRUItem2=/Game/FirstPerson/Blueprints/W_Message
+MRUItem3=/Game/UI/WBP_AgeDisplay
+MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem5=/Game/scene/EndingGameMode
+MRUItem6=/Game/scene/EndingLevel
+MRUItem7=/Game/scene/MenuGameMode
+MRUItem8=/Game/scene/EndingWidget
+MRUItem9=/Game/scene/MainMenu
+MRUItem10=/Game/scene/MainMenuMap
 MRUItem11=/Game/Enemy/Enemy
 MRUItem12=/Game/Door/BP_Door
 MRUItem13=/Game/P_ButonPuzzle1/TVPlayer
@@ -2866,8 +2867,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
