yarım kalmış tabut kodu
yarım kalmış tabut kodu

--- a/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal/HallowedDecay/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -55,6 +55,8 @@ bEnableColorizedEditorTabs=True
 CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
+NewWindowWidth=1914
+NewWindowHeight=404
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -100,7 +102,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=320,Y=156)
+NewWindowPosition=(X=0,Y=588)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -127,13 +129,13 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=1914,Y=404)
 LastExecutedLaunchDevice=Windows@VICTUS
 LastExecutedLaunchName=VICTUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=320,Y=156)
+MultipleInstancePositions=(X=0,Y=588)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -197,7 +199,7 @@ BrushComponent=
 NavMeshBoundsVolume=PostProcessVolume.Lens.Lens
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson
+ContentBrowserDrawer.SelectedPaths=/Game/OyunSonu
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -219,12 +221,18 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/OyunSonu
 ContentBrowserDrawer.JumpMRU=/All/Game/GameAssets
-ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/GameAssets/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/UI
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
+ContentBrowserDrawer.JumpMRU=/All/Game/P_ButonPuzzle1
+ContentBrowserDrawer.JumpMRU=/All/Game/PotionsPuzzle2
+ContentBrowserDrawer.JumpMRU=/All/Game/Potions
 ContentBrowserDrawer.JumpMRU=/All/Game/scene
+ContentBrowserDrawer.JumpMRU=/All/Game/Door
+ContentBrowserDrawer.JumpMRU=/All/Game/Enemy
+ContentBrowserDrawer.JumpMRU=/All/Game/GameAssets/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/CheckPoint
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
@@ -232,6 +240,9 @@ ToolbarOpenBPClass.ZoomScale=0
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.ZoomScale=0
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
+AssetDialog.ZoomScale=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
@@ -264,7 +275,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 BillboardComponent="\"Object\" "
 Enemy_C="\"Object\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
@@ -285,24 +296,47 @@ Material="\"Object\" "
 MaterialInterface="\"Object\" "
 CheckPoint_C="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
+StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
 MaterialExpressionConstant="\"Object\" "
 BP_FirstPersonCharacter2_C="\"Object\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+MediaPlayer="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" "
+OyunSonuWidget_C="\"Object\" "
+MediaTexture="\"Object\" "
+Texture="\"Object\" "
+Video_C="\"Object\" "
+MediaPlaylist="\"Object\" \"Object.Playlist.Items\" "
+FileMediaSource="\"Object\" "
+BaseMediaSource="\"Object\" "
+MediaSource="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=PropertyEditor
+RecentAssetEditors=MediaPlaylistEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=PropertyEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/GameAssets/Tabut.Tabut
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2.BP_FirstPersonCharacter2
+OpenAssetsAtExit=/Game/GameAssets/Tabut.Tabut
+OpenAssetsAtExit=/Game/OyunSonu/Ending.Ending
+OpenAssetsAtExit=/Game/OyunSonu/OyunSonuWidget.OyunSonuWidget
+OpenAssetsAtExit=/Game/scene/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/UI/Video.Video
+OpenAssetsAtExit=/Game/OyunSonu/OyunSonuPlaylist.OyunSonuPlaylist
+OpenAssetsAtExit=/Game/OyunSonu/GameVideo_1.GameVideo_1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -768,6 +802,60 @@ BP_FirstPersonCharacter2_C.Pawn=True
 BP_FirstPersonCharacter2_C.Actor=True
 BP_FirstPersonCharacter2_C.Input=True
 BP_FirstPersonCharacter2_C.Events=True
+Tabut_C.TransformCommon=True
+Tabut_C.Networking=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+MediaPlayer.Playback=True
+MediaPlayer.ViewSettings=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+BoxComponent.Variable=True
+BoxComponent.Sockets=True
+BoxComponent.ComponentTick=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Events=True
+MediaTexture.MediaTexture=True
+MediaTexture.Media=True
+OyunSonuWidget_C.Varsayılan=True
+OyunSonuWidget_C.Appearance=True
+OyunSonuWidget_C.Input=True
+OyunSonuWidget_C.Interaction=True
+OyunSonuWidget_C.Designer=True
+OyunSonuWidget_C.Performance=True
+OyunSonuWidget_C.Layout=True
+OyunSonuWidget_C.Behavior=True
+OyunSonuWidget_C.Render Transform=True
+OyunSonuWidget_C.Localization=True
+OyunSonuWidget_C.Accessibility=True
+OyunSonuWidget_C.Rendering=True
+OyunSonuWidget_C.Navigation=True
+OyunSonuWidget_C.Events=True
+Video_C.Kullanıcı Arayüzü =True
+Video_C.Appearance=True
+Video_C.Input=True
+Video_C.Interaction=True
+Video_C.Designer=True
+Video_C.Performance=True
+Video_C.Layout=True
+Video_C.Behavior=True
+Video_C.Render Transform=True
+Video_C.Localization=True
+Video_C.Accessibility=True
+Video_C.Rendering=True
+Video_C.Navigation=True
+MediaPlaylist.Playlist=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+MediaPlayer.Editor=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -876,11 +964,18 @@ LastFilterBarSizeCoefficient=0.000000
 ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2
-MRUItem1=/Game/GameAssets/Tabut
-MRUItem2=/Game/Enemy/Enemy
-MRUItem3=/Game/scene/MainMenuMap
+MRUItem0=/Game/OyunSonu/EndingMat
+MRUItem1=/Game/OyunSonu/GameVideo_1
+MRUItem2=/Game/OyunSonu/OyunSonuPlaylist
+MRUItem3=/Game/UI/Video
 MRUItem4=/Game/scene/MainMenu
+MRUItem5=/Game/OyunSonu/Endingg
+MRUItem6=/Game/OyunSonu/OyunSonuWidget
+MRUItem7=/Game/OyunSonu/Ending
+MRUItem8=/Game/GameAssets/Tabut
+MRUItem9=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2
+MRUItem10=/Game/Enemy/Enemy
+MRUItem11=/Game/scene/MainMenuMap
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -910,6 +1005,12 @@ RecentlyPlaced=/Game/UI/menu_music.menu_music;
 /Game/Enemy/Enemy.Enemy=0
 /Game/GameAssets/Tabut.Tabut=0
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter2.BP_FirstPersonCharacter2=0
+/Game/OyunSonu/Endingg.Endingg=0
+/Game/OyunSonu/Ending.Ending=0
+/Game/OyunSonu/OyunSonuWidget.OyunSonuWidget=0
+/Game/UI/Video.Video=0
+/Game/OyunSonu/OyunSonuPlaylist.OyunSonuPlaylist=0
+/Game/OyunSonu/GameVideo_1.GameVideo_1=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -933,8 +1034,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -964,7 +1065,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=340.000 Y=317.000
+ScreenPosition=X=164.000 Y=839.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2268,6 +2369,8 @@ MaterialEditor.TimeStamp=2025.03.08-16.47.13
 MaterialEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2025.03.08-16.46.51
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2025.03.08-16.48.10
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2597,4 +2700,12 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 MaterialStatsDerivedMIOption=Ignore
+
+[DetailCategoriesAdvanced]
+PropertyWrapper.Variable=True
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24
+Property=0.5
+Value=1
 
