--- a/Unreal/HallowedDecay/Config/DefaultGame.ini
+++ b/Unreal/HallowedDecay/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=247BF2D04664BFD0D66344A7B79C18F1
-ProjectName=First Person BP Game Template
+ProjectID=08FFA68A44BBBCA93C07A9B5EF07E693
+ProjectName=Hallowed Decay
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +8,9 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
+
