--- a/Unreal/HallowedDecay/Config/DefaultEngine.ini
+++ b/Unreal/HallowedDecay/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/GI_GlobalData.GI_GlobalData_C
 GameDefaultMap=/Game/scene/MainMenuMap.MainMenuMap
-ServerDefaultMap=/Game/scene/MainMenuMap.MainMenuMap
+ServerDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
